# pdf-splitter

./: .gitattributes  .gitignore  LICENSE  README.md  build_mac.sh  build_windows.ps1  pyproject.toml  run_gui.pyw
.github/workflows/: build-macos.yml  build.yml  ci.yml
assets/: make_icon.py
pdfsplit/: __init__.py  cli.py  core.py  gui.py  i18n.py
