[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfsplit"
dynamic = ["version"]
description = "Split a PDF into multiple files by page range, with a simple GUI (English/Portuguese)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["pypdf>=4"]

[project.gui-scripts]
pdfsplit = "pdfsplit.gui:main"

[project.scripts]
pdfsplit-cli = "pdfsplit.cli:main"

[tool.setuptools]
packages = ["pdfsplit"]

[tool.setuptools.dynamic]
version = { attr = "pdfsplit.__version__" }
